[package]
name = "rmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version =  "4.1.4" , features = ["derive"]}
env_logger = "0.10.0"
geo = "0.23.1"
geojson = "0.24.0"
log = "0.4.17"
petgraph = "0.6.2"
rtree_rs = "0.1.4"
uuid = {version = "1.2.2", features =["v4"]}
wkt = "0.10.3"
